src/compiletest/tcell-11.stderr
error[E0277]: `std::cell::Cell<i32>` cannot be shared between threads safely
 --> $DIR/tcell-11.rs:9:5
  |
8 |     fn is_sync<T: Sync>() {}
  |        -------    ---- required by this bound in `main::is_sync`
9 |     is_sync::<TCell<Marker, Cell<i32>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::cell::Cell<i32>` cannot be shared between threads safely
  |
  = help: the trait `std::marker::Sync` is not implemented for `std::cell::Cell<i32>`
  = note: required because of the requirements on the impl of `std::marker::Sync` for `qcell::TCell<main::Marker, std::cell::Cell<i32>>`
